--- a/hackarto_vl/index.html
+++ b/hackarto_vl/index.html
@@ -83,67 +83,88 @@
       <div class="box">
 
         <form>
+          <div id="start">
 
-          <div class="card text-white bg-dark mb-3">
-            <h2 class="card-header">That's Hot</h2>
-            <div class="card-body">
-              <h5>Find the County!</h5>
-              Enter your name, Click start, and frantically try to find the "hot" county by hovering over counties, with styling as your guide to the heat. Thank you found it? Click! <br><br> p.s. you're on the clock. good luck ;)
-            </div>
-          </div>
-
-          <div class="card text-white bg-dark mb-3">
-            <h2 class="card-header">Rankings</h2>
-            <div class="card-body">
-              <div class="table-responsive">
-                <table class="table table-striped table-dark">
-                  <thead>
-                    <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">Name</th>
-                      <th scope="col">Country</th>
-                      <th scope="col">Time</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <th scope="row">1</th>
-                      <td>Alex</td>
-                      <td>Spain</td>
-                      <td>00:00:22</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2</th>
-                      <td>Alex</td>
-                      <td>United States</td>
-                      <td>00:00:30</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3</th>
-                      <td>Alex</td>
-                      <td>kazakhstan</td>
-                      <td>00:00:57</td>
-                    </tr>
-                  </tbody>
-                </table>
+            <div class="card text-white bg-dark mb-3">
+              <h2 class="card-header">That's Hot</h2>
+              <div class="card-body">
+                <h5>Find the County!</h5>
+                Enter your name, Click start, and frantically try to find the "hot" county by hovering over counties, with styling as your guide to the heat. Thank you found it? Click! <br><br> p.s. you're on the clock. good luck ;)
               </div>
             </div>
-          </div>
 
-          <div class="card text-white bg-dark mb-3">
-            <div class="card-body">
+            <div class="card text-white bg-dark mb-3">
+              <h2 class="card-header">Rankings</h2>
+              <div class="card-body">
+                <div class="table-responsive">
+                  <table class="table table-striped table-dark">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Country</th>
+                        <th scope="col">Time</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Alex</td>
+                        <td>Spain</td>
+                        <td>00:00:22</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Alex</td>
+                        <td>United States</td>
+                        <td>00:00:30</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Alex</td>
+                        <td>kazakhstan</td>
+                        <td>00:00:57</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
 
-              <div class="form-row align-items-center">
-                <div class="col-sm-auto my-1">
-                  <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="your name" id="username" required>
-                    <div class="input-group-append">
-                      <button class="btn btn-outline-warning" type="button" onclick="startGame()">Start Game</button>
+            <div class="card text-white bg-dark mb-3">
+              <div class="card-body">
+
+                <div class="form-row align-items-center">
+                  <div class="col-sm-auto my-1">
+                    <div class="input-group mb-3">
+                      <input type="text" class="form-control" placeholder="your name" id="username" required>
+                      <div class="input-group-append">
+                        <button class="btn btn-outline-warning" type="button" onclick="startGame()">Start Game</button>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
 
+              </div>
+            </div>
+          </div>
+
+          <div id="quit" style="display:none">
+            <div class="card text-white bg-dark mb-3">
+              <div class="card-body">
+
+                <div class="form-row align-items-center">
+                  <div class="col-sm-auto my-1">
+                    <div class="input-group mb-3">
+                      <input type="text" readonly class="form-control" id="quitDialog" >
+                      <div class="input-group-append">
+                        <button class="btn btn-outline-warning" type="button" onclick="quitGame()">Quit Game</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
             </div>
           </div>
 
@@ -203,54 +224,50 @@
 
       var username = '';
 
-
-      function genRand(min, max, decimalPlaces) {
+      //for a random float
+      function randFloat(min, max, decimalPlaces) {
         var rand = Math.random()*(max-min) + min;
         var power = Math.pow(10, decimalPlaces);
         return Math.floor(rand*power) / power;
       }
+
+      //for a random whole
+      function randWhole(min, max){
+        return Math.floor(Math.random() * (max - min + 1)) + min;
+      }
+
 
       // Extent: (-124.848974, 24.396308) - (-66.885444, 49.384358)
       function startGame(){
 
         // step one: get random coords
         username = document.getElementById('username').value;
-        let tempLon = genRand(-124.848974,-66.885444,6);
-        let tempLat = genRand(24.396308,49.384358,6);
+        let tempCBDID = randWhole(1,3869);
         let Ukey = username.substring(0,2)+ Math.random()
 
         //sql queries to be used
-        let sqlInsert = 'INSERT INTO hackartovl_rand (the_geom,name,key) VALUES (cdb_latlng('+tempLat+','+tempLon+'),\''+username+'\',\''+Ukey+'\')'
+        let sqlInsert = 'INSERT INTO hackartovl_rand (the_geom,name,county,state,key) SELECT st_centroid(the_geom) as the_geom, \''+username+'\'as name, county, statefull,\''+Ukey+'\' as key FROM hackartovl_counties WHERE cartodb_id=\''+tempCBDID+'\'';
 
         //write to carto
         $.getJSON('https://'+cartouser+'.carto.com/api/v2/sql?q='+sqlInsert+'&api_key='+apiKey,function(data){
         });
 
-        //check if coords intersect with polygons
-        checkIntersects(Ukey);
+        let x = document.getElementById('start');
+        let y = document.getElementById('quit');
 
+          x.style.display = "none";
+          y.style.display = "block";
+          document.getElementById('quitDialog').value = document.getElementById('username').value
       }
 
-      function checkIntersects(Tkey){
+      function quitGame(){
+        let x = document.getElementById('start');
+        let y = document.getElementById('quit');
 
-        let tempLon = '';
-        let tempLat = '';
+          x.style.display = "block";
+          y.style.display = "none";
+          document.getElementById('username').value=''
 
-        //sql queries to be used
-        let sqlCheck = 'SELECT ST_INTERSECTS(a.the_geom,b.the_geom) FROM hackartovl_rand a, hackartovl_counties b WHERE a.key=\''+Tkey+'\''
-        let sqlUpdate = 'UPDATE hackartovl_rand SET the_geom = cdb_latlng('+tempLat+','+tempLon+') WHERE a.key=\''+Tkey+'\''
-
-        $.getJSON('https://'+cartouser+'.carto.com/api/v2/sql?q='+sqlCheck+'&api_key='+apiKey,function(data){
-          $.each(data.rows, function(key, val){
-            if(false){
-              tempLon = genRand(-124.848974,-66.885444,6);
-              tempLat = genRand(24.396308,49.384358,6);
-              $.getJSON('https://'+cartouser+'.carto.com/api/v2/sql?q='+sqlUpdate+'&api_key='+apiKey,function(data){
-              });
-              checkIntersects(Tkey);
-            }
-          });
-        });
       }
 
     </script>
