--- a/hackarto_vl/index.html
+++ b/hackarto_vl/index.html
@@ -71,8 +71,16 @@
         z-index: 2;
       }
 
-
-
+      .bigg {
+        color: #FFFFFF;
+        line-height: 30px;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 30px;
+        font-weight: 600;
+      }
+      .grad {
+        background: linear-gradient(to left, #C75DAB,#D691C1,#E4C1D9,#F1F1F1,#A7D3D4,#42B7B9,#009B9E);
+      }
 
     </style>
   </head>
@@ -83,52 +91,29 @@
       <div class="box">
 
         <form>
+          <div class="form-row align-items-center">
+            <div class="col-sm-1.5 my-1">
+            <span class="badge badge-primary">COLD</span>
+            </div>
+            <div class="col-sm-9 my-1">
+              <div class="progress">
+                <div class="grad" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="col-sm-1 my-1">
+              <span class="badge badge-danger">HOT</span>
+            </div>
+          </div>
+
           <div id="start">
 
             <div class="card text-white bg-dark mb-3">
               <h2 class="card-header">That's Hot</h2>
               <div class="card-body">
                 <h5>Find the County!</h5>
-                Enter your name, Click start, and frantically try to find the "hot" county by hovering over counties, with styling as your guide to the heat. Thank you found it? Click! <br><br> p.s. you're on the clock. good luck ;)
+                Enter your name, Click start, and frantically try to find the "hot" county by hovering over counties, with styling as your guide to the heat. Think you found it? Click! <br><br> p.s. you're on the clock. good luck ;)
               </div>
-            </div>
 
-            <div class="card text-white bg-dark mb-3">
-              <h2 class="card-header">Rankings</h2>
-              <div class="card-body">
-                <div class="table-responsive">
-                  <table class="table table-striped table-dark">
-                    <thead>
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Country</th>
-                        <th scope="col">Time</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Alex</td>
-                        <td>Spain</td>
-                        <td>00:00:22</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">2</th>
-                        <td>Alex</td>
-                        <td>United States</td>
-                        <td>00:00:30</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td>Alex</td>
-                        <td>kazakhstan</td>
-                        <td>00:00:57</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
             </div>
 
             <div class="card text-white bg-dark mb-3">
@@ -147,6 +132,41 @@
 
               </div>
             </div>
+
+            <div class="card text-white bg-dark mb-3">
+              <h2 class="card-header">Rankings</h2>
+              <div class="card-body">
+                <div class="table-responsive">
+                  <table class="table table-striped table-dark">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Time</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Alex</td>
+                        <td>00:00:22</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Alex</td>
+                        <td>00:00:30</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Alex</td>
+                        <td>00:00:57</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+
           </div>
 
           <div id="quit" style="display:none">
@@ -166,11 +186,17 @@
 
               </div>
             </div>
+
+            <div class="card text-white bg-dark mb-3">
+              <div class="card-body">
+                <timerr class="bigg">Loading</timerr>
+                <div id="stopwatch" class="bigg"></div>
+            </div>
+            </div>
+
           </div>
 
         </form>
-
-
 
       </div>
     </aside>
@@ -187,8 +213,8 @@
 
     <script>
 
-    var cartouser='aroth-carto';
-    var apiKey='5EWvX0sSAvjA04pDME-f3w';
+      var cartouser='aroth-carto';
+      var apiKey='ph5ha3HwevGxa7TECTzjjw';
 
       const map = new mapboxgl.Map({
         container: 'map',
@@ -205,24 +231,36 @@
         apiKey: apiKey
       });
 
-      const source = new carto.source.Dataset('hackartovl_counties');
 
-      const viz = new carto.Viz(`
-          color: opacity(ramp($geoid,[#009392,#72aaa1,#b1c7b3,#f1eac8,#e5b9ad,#d98994,#d0587e]),1)
-          strokeColor: rgba(14, 14, 14, 0.35)
-          strokeWidth: 1
-
-
-      `);
-
-      const layer = new carto.Layer('layer', source, viz);
-
-      const interactivity = new carto.Interactivity(layer);
-      // interactivity.on('featureClick', captureZone);
-
-      layer.addTo(map);
 
       var username = '';
+      // var source ='';
+      // var viz ='';
+      var layer='';
+      var myKey='';
+
+
+      function loadMap(key){
+         const source = new carto.source.SQL('SELECT a.*, (ST_distance(a.the_geom,b.the_geom)/c.heatlamp)*2.3 as heat FROM hackartovl_counties a, hackartovl_rand b, (select MAX(ST_distance(a.the_geom,b.the_geom)) as heatlamp from hackartovl_counties a, hackartovl_rand b) c WHERE b.cartodb_id = (select MAX(cartodb_id) from hackartovl_rand)');
+
+         const viz = new carto.Viz(`
+          color: opacity(ramp($heat,[#C75DAB,#D691C1,#E4C1D9,#F1F1F1,#A7D3D4,#42B7B9,#009B9E]),1)
+          strokeColor: opacity(ramp($heat,[#DB66BC,#EB9FD4,#F7D1EB,#FFFFFF,#B7E7E8,#4ACCCF,#00AFB2]),1)
+          strokeWidth: .4
+
+          @county: $county
+
+        `);
+
+        layer = new carto.Layer(key, source, viz);
+
+        const interactivity = new carto.Interactivity(layer);
+        interactivity.on('featureClick', checkMatching);
+        //interactivity.on('feature')
+
+        layer.addTo(map);
+      }
+
 
       //for a random float
       function randFloat(min, max, decimalPlaces) {
@@ -244,6 +282,7 @@
         username = document.getElementById('username').value;
         let tempCBDID = randWhole(1,3869);
         let Ukey = username.substring(0,2)+ Math.random()
+        myKey=Ukey;
 
         //sql queries to be used
         let sqlInsert = 'INSERT INTO hackartovl_rand (the_geom,name,county,state,key) SELECT st_centroid(the_geom) as the_geom, \''+username+'\'as name, county, statefull,\''+Ukey+'\' as key FROM hackartovl_counties WHERE cartodb_id=\''+tempCBDID+'\'';
@@ -255,23 +294,121 @@
         let x = document.getElementById('start');
         let y = document.getElementById('quit');
 
-          x.style.display = "none";
-          y.style.display = "block";
-          document.getElementById('quitDialog').value = document.getElementById('username').value
+        x.style.display = "none";
+        y.style.display = "block";
+        document.getElementById('quitDialog').value = document.getElementById('username').value
+
+        loadMap(myKey);
+
+        timer();
+
       }
 
       function quitGame(){
         let x = document.getElementById('start');
         let y = document.getElementById('quit');
 
-          x.style.display = "block";
-          y.style.display = "none";
-          document.getElementById('username').value=''
+        x.style.display = "block";
+        y.style.display = "none";
+        document.getElementById('username').value=''
+
+        window.location.reload();
+      }
+
+      function checkMatching(event){
+console.log('in the func')
+        let clicounty = '';
+        let mycounty = '';
+
+        for (let feature of event.features) {
+          clicounty = feature.variables.county.value;
+        }
+
+        let sqlCheck = 'SELECT county FROM hackartovl_rand WHERE key = \''+myKey+'\''
+
+        $.getJSON('https://'+cartouser+'.carto.com/api/v2/sql?q='+sqlCheck+'&api_key='+apiKey,function(data){
+          $.each(data.rows, function(key, val){
+            var json = JSON.parse(data);
+            //console.log(data)
+            console.log(json);
+            //console.log(data.rows[0].county)
+            // mycounty = data.county[0];
+            //console.log(row.county[0])
+          });
+        });
+        console.log(mycounty);
 
       }
 
-    </script>
 
+
+      // function findZone(event){
+      //         let content='';
+      //         for (let feature of event.features){
+      //           content += `
+      //           <div class="container">
+      //             <p class="bigg">Zone: ${feature.variables.locationid.value}</p>
+      //             <p class="midd">${feature.variables.zone.value}</span></p>
+      //             <p class="smalll">Latitude: ${event.coordinates.lat.toFixed(4)}</p>
+      //             <p class="smalll">Longitude: ${event.coordinates.lng.toFixed(4)}</p>
+      //           </div>
+      //         `;
+      //         }
+      //         document.getElementById('content').innerHTML = content;
+      //       }
+
+
+
+      //timer elements
+      var timerr = document.getElementsByTagName('timerr')[0],
+        // start = document.getElementById('start'),
+        // stop = document.getElementById('stop'),
+        // clear = document.getElementById('clear'),
+        seconds = 0, minutes = 0, hours = 0,
+        t,time='',countdown=0;
+      //
+      function add() {
+        if (countdown<=10 && map.loaded()==false){
+          countdown++;
+          timer();
+          timerr.textContent += (".");
+          console.log(map.loaded());
+        }else{
+          seconds++;
+          if (seconds >= 60) {
+              seconds = 0;
+              minutes++;
+              if (minutes >= 60) {
+                  minutes = 0;
+                  hours++;
+              }
+          }
+
+          timerr.textContent = (hours ? (hours > 9 ? hours : "0" + hours) : "00") + ":" + (minutes ? (minutes > 9 ? minutes : "0" + minutes) : "00") + ":" + (seconds > 9 ? seconds : "0" + seconds);
+          time=timerr.textContent
+
+          //document.getElementById('stopwatch').innerHTML = time;
+
+          timer();
+        }
+      }
+      function timer() {
+        t = setTimeout(add, 1000);
+
+      }
+
+      // /* Stop button */
+      // stop.onclick = function() {
+      //     clearTimeout(t);
+      // }
+      //
+      // /* Clear button */
+      // clear.onclick = function() {
+      //     timerr.textContent = "00:00:00";
+      //     seconds = 0; minutes = 0; hours = 0;
+      // }
+
+    </script>
 
   </body>
 
